Added Undo for moves, started refactoring