@@ -1,11 +1,14 @@
 package com.um_project_game.board;
 
+import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.BiPredicate;
 import java.util.stream.Collectors;
 
+import com.um_project_game.Game;
+import javafx.scene.layout.VBox;
 import org.joml.Vector2i;
 
 import com.um_project_game.util.SoundPlayer;
@@ -26,20 +29,23 @@ public class MainBoard {
 
     SoundPlayer soundPlayer = new SoundPlayer();
 
-    private static final int BOARD_SIZE = 10;
-    private Vector2i boardSize = new Vector2i(BOARD_SIZE, BOARD_SIZE);
+    private static final int TILEAMOUNT = 10;
+    private final Vector2i tileamount = new Vector2i(TILEAMOUNT, TILEAMOUNT);
     private Pawn focusedPawn;
-    private List<Vector2i> possibleMoves = new ArrayList<>();
     private boolean isWhiteTurn = true; // White starts first
-    private List<Vector2i> listMoves = new ArrayList<>();
+
     private boolean isActive = true;
     private Pane root;
 
     private GameInfo gameInfo;
 
-
     private float tileSize;
     private GridPane board;
+    private List<Pawn> pawns;
+    // Moves stored in game for easy access
+    private List<Move>moves = new ArrayList<>();
+
+    private MovesListManager movesListManager;
 
     /**
      * Creates and returns the main board, rendering it to the root pane.
@@ -49,38 +55,42 @@ public class MainBoard {
      * @param boardPosition Position where the board should be placed (x, y).
      * @return GridPane representing the board.
      */
-    public GridPane getMainBoard(Pane root, float boardPixelSize, Vector2i boardPosition, GameInfo gameInfo) {
-        tileSize = boardPixelSize / BOARD_SIZE;
-        List<Pawn> pawns = new ArrayList<>();
+    public GridPane getMainBoard(Pane root, float boardPixelSize, Vector2i boardPosition, GameInfo gameInfo, VBox movesListVBox) {
+        tileSize = boardPixelSize / TILEAMOUNT;
+        pawns = new ArrayList<>();
         board = new GridPane();
         isWhiteTurn = true;
         this.root = root;
         this.gameInfo = gameInfo;
         gameInfo.playerTurn.set(1);
+        movesListManager = new MovesListManager(movesListVBox);
 
         board.setLayoutX(boardPosition.x);
         board.setLayoutY(boardPosition.y);
 
-        setupBoard(pawns);
+        setupBoard();
         renderBoard();
-        renderPawns(pawns);
+        renderPawns();
 
         return board;
     }
 
+    /**
+     * Resize the board according to the current board Size
+     * @param boardPixelSize Size of the board in pixels.
+     * @return GridPane
+     */
     public GridPane resizeBoard(float boardPixelSize) {
-        tileSize = boardPixelSize / BOARD_SIZE;
+        tileSize = boardPixelSize / TILEAMOUNT;
 
         // Resize the board tiles and pawns without recreating everything
         for (var child : board.getChildren()) {
-            if (child instanceof Rectangle) {
+            if (child instanceof Rectangle square) {
                 // Resize each tile (Rectangle)
-                Rectangle square = (Rectangle) child;
                 square.setWidth(tileSize);
                 square.setHeight(tileSize);
-            } else if (child instanceof ImageView) {
+            } else if (child instanceof ImageView pawnView) {
                 // Resize each pawn (ImageView)
-                ImageView pawnView = (ImageView) child;
                 pawnView.setFitWidth(tileSize * 0.8);
                 pawnView.setFitHeight(tileSize * 0.8);
                 pawnView.hoverProperty().addListener((observable, oldValue, newValue) -> {
@@ -95,14 +105,26 @@ public class MainBoard {
         return board;
     }
 
+    public VBox getMovesListVBox() {
+        return movesListManager.getMovesListVBox(); // Reference to the VBox for moves
+    }
+
+    private void updateMovesListUI() {
+        movesListManager.updateMovesListUI(moves);
+    }
+
+    /**
+     * Resets the game
+     * @param boardPixelSize Size of the board in pixels.
+     */
     public void resetGame(float boardPixelSize) {
-        tileSize = boardPixelSize / BOARD_SIZE;
-        List<Pawn> pawns = new ArrayList<>();
+        tileSize = boardPixelSize / TILEAMOUNT;
+        pawns = new ArrayList<>();
         isWhiteTurn = true;
         board.getChildren().clear();
         renderBoard();
-        setupBoard(pawns);
-        renderPawns(pawns);
+        setupBoard();
+        renderPawns();
         gameInfo.scorePlayerOne.set(0);
         gameInfo.scorePlayerTwo.set(0);
     }
@@ -110,20 +132,20 @@ public class MainBoard {
     /**
      * Creates and returns a random board, suitable for non-unique layouts.
      *
-     * @param root          Root pane of the window.
+     * @param root Root pane of the window.
      * @param boardPixelSize Size of the board in pixels.
      * @return GridPane representing a random board.
      */
     public GridPane getRandomBoard(Pane root, float boardPixelSize) {
-        tileSize = boardPixelSize / BOARD_SIZE;
-        List<Pawn> pawns = new ArrayList<>();
+        tileSize = boardPixelSize / TILEAMOUNT;
+        pawns = new ArrayList<>();
         board = new GridPane();
 
         isActive = false;
 
-        setupBoard(pawns);
+        setupBoard();
         renderBoard();
-        renderPawns(pawns);
+        renderPawns();
         board.getStyleClass().add("board");
 
         return board;
@@ -132,13 +154,12 @@ public class MainBoard {
     /**
      * Sets up the initial positions of the pawns on the board.
      *
-     * @param pawns List to populate with the initial pawns.
      */
-    private void setupBoard(List<Pawn> pawns) {
+    private void setupBoard() {
         // Function to add pawns to the board
         BiConsumer<Integer, Boolean> addPawns = (startRow, isWhite) -> {
             for (int y = startRow; y < startRow + 4; y++) {
-                for (int x = 0; x < boardSize.x; x++) {
+                for (int x = 0; x < tileamount.x; x++) {
                     if ((x + y) % 2 == 1) {
                         pawns.add(new Pawn(new Vector2i(x, y), isWhite));
                     }
@@ -153,10 +174,7 @@ public class MainBoard {
     }
 
     /**
-     * Renders the board grid.
-     *
-     * @param tileSize Size of each tile.
-     * @param board    GridPane to render the board onto.
+     * Renders the board grid by rendering each tile
      */
     private void renderBoard() {
         BiConsumer<Integer, Integer> renderTile = (x, y) -> {
@@ -165,26 +183,22 @@ public class MainBoard {
             board.add(square, x, y);
         };
 
-        for (int y = 0; y < boardSize.y; y++) {
-            for (int x = 0; x < boardSize.x; x++) {
+        for (int y = 0; y < tileamount.y; y++) {
+            for (int x = 0; x < tileamount.x; x++) {
                 renderTile.accept(x, y);
             }
         }
     }
 
     /**
-     * Renders the pawns onto the board.
-     *
-     * @param board    GridPane representing the board.
-     * @param pawns    List of pawns to render.
-     * @param tileSize Size of each tile.
+     * Renders each pawn on the board
      */
-    private void renderPawns(List<Pawn> pawns) {
+    private void renderPawns() {
         double scaleFactor = 0.8;
-        
+
         pawns.forEach(pawn -> {
             ImageView pawnView = createPawnImageView(pawn, scaleFactor);
-            setupPawnInteractions(pawnView, pawn, pawns);
+            setupPawnInteractions(pawnView, pawn);
             board.add(pawnView, pawn.getPosition().x, pawn.getPosition().y);
             GridPane.setHalignment(pawnView, HPos.CENTER);
             GridPane.setValignment(pawnView, VPos.CENTER);
@@ -192,12 +206,10 @@ public class MainBoard {
     }
 
     /**
-     * Creates an ImageView for a pawn.
-     *
-     * @param pawn       The pawn for which to create the ImageView.
-     * @param tileSize   Size of each tile.
-     * @param scaleFactor Scaling factor for the pawn image.
-     * @return ImageView representing the pawn.
+     * Creates an imageview for the pawn
+     * @param pawn Current pawn
+     * @param scaleFactor ScaleFactor of the imageview
+     * @return ImageView
      */
     private ImageView createPawnImageView(Pawn pawn, double scaleFactor) {
         ImageView pawnView = new ImageView(pawn.getImage());
@@ -212,14 +224,10 @@ public class MainBoard {
 
     /**
      * Sets up the interactions for a pawn ImageView.
-     *
-     * @param pawnView The ImageView of the pawn.
-     * @param pawn     The pawn object.
-     * @param board    GridPane representing the board.
-     * @param pawns    List of all pawns.
-     * @param tileSize Size of each tile.
+     * @param pawnView ImageView of the Pawn
+     * @param pawn Current Pawn
      */
-    private void setupPawnInteractions(ImageView pawnView, Pawn pawn, List<Pawn> pawns) {
+    private void setupPawnInteractions(ImageView pawnView, Pawn pawn) {
         pawnView.hoverProperty().addListener((observable, oldValue, newValue) -> {
             double scaleFactor = newValue ? 0.96 : 0.8; // Increase size on hover
             pawnView.setFitWidth(tileSize * scaleFactor);
@@ -233,19 +241,18 @@ public class MainBoard {
         pawnView.setOnMouseClicked(event -> {
             clearHighlights();
             focusedPawn = pawn;
-            seePossibleMove(pawns, focusedPawn);
-            renderPawns(pawns);
+            seePossibleMove(focusedPawn);
+            renderPawns();
         });
     }
 
     /**
      * Retrieves a pawn at a given position.
      *
-     * @param pawns    List of all pawns.
      * @param position Position to check.
      * @return Pawn at the position, or null if none.
      */
-    private Pawn getPawnAtPosition(List<Pawn> pawns, Vector2i position) {
+    private Pawn getPawnAtPosition(Vector2i position) {
         return pawns.stream()
                 .filter(p -> p.getPosition().equals(position))
                 .findFirst()
@@ -254,52 +261,41 @@ public class MainBoard {
 
     /**
      * Highlights possible moves for the selected pawn.
-     *
-     * @param board    GridPane representing the board.
-     * @param pawns    List of all pawns.
-     * @param pawn     The selected pawn.
-     * @param tileSize Size of each tile.
+     * @param pawn Current Pawn
      */
-    private void seePossibleMove(List<Pawn> pawns, Pawn pawn) {
-        possibleMoves.clear();
+    private void seePossibleMove(Pawn pawn) {
         Vector2i position = pawn.getPosition();
         int x = position.x;
         int y = position.y;
 
         BiPredicate<Integer, Integer> inBounds = (newX, newY) ->
-                newX >= 0 && newX < boardSize.x && newY >= 0 && newY < boardSize.y;
+                newX >= 0 && newX < tileamount.x && newY >= 0 && newY < tileamount.y;
 
         List<CapturePath> allPaths = new ArrayList<>();
 
-        captureCheck(pawns, pawn, inBounds, x, y, new CapturePath(), allPaths);
+        captureCheck(pawn, inBounds, x, y, new CapturePath(), allPaths);
 
         if (!allPaths.isEmpty()) {
-            handleCaptureMoves(pawns, pawn,allPaths);
+            handleCaptureMoves(pawn,allPaths);
         } else {
-            handleNormalMoves(pawns, pawn, inBounds, x, y);
+            handleNormalMoves(pawn, inBounds, x, y);
         }
     }
 
     /**
      * Handles capture moves by highlighting them and setting up interactions.
-     *
-     * @param board    GridPane representing the board.
-     * @param pawns    List of all pawns.
-     * @param pawn     The selected pawn.
-     * @param tileSize Size of each tile.
-     * @param allPaths List of all possible capture paths.
+     * @param pawn Current Pawn
+     * @param allPaths All possible Capture Paths
      */
-    private void handleCaptureMoves(List<Pawn> pawns, Pawn pawn, List<CapturePath> allPaths) {
+    private void handleCaptureMoves(Pawn pawn, List<CapturePath> allPaths) {
         int maxCaptures = allPaths.stream().mapToInt(CapturePath::getCaptureCount).max().orElse(0);
 
         List<CapturePath> maxCapturePaths = allPaths.stream()
-                .filter(path -> path.getCaptureCount() == maxCaptures)
-                .collect(Collectors.toList());
+                .filter(path -> path.getCaptureCount() == maxCaptures).toList();
 
         BiConsumer<CapturePath, Vector2i> highlightCaptureMove = (path, landingPos) -> {
             Rectangle square = createHighlightSquare(Color.RED);
             board.add(square, landingPos.x, landingPos.y);
-            possibleMoves.add(landingPos);
 
             square.setOnMouseClicked(event -> {
                 if (isWhiteTurn != pawn.isWhite()) {
@@ -307,11 +303,19 @@ public class MainBoard {
                     return;
                 }
                 soundPlayer.playMoveSound();
+                List<Vector2i> capturedPositions = new ArrayList<>();
+
+
+                path.capturedPawns.forEach(capturedPawn -> {
+                    capturedPositions.add(capturedPawn.getPosition());
+                    removePawn(capturedPawn);
+                });
+                moves.add(new Move(pawn.getPosition(),landingPos, capturedPositions));
                 pawn.setPosition(landingPos);
-                path.capturedPawns.forEach(capturedPawn -> removePawn(pawns, capturedPawn));
                 promotePawnIfNeeded(pawn, landingPos);
                 clearHighlights();
-                renderPawns(pawns);
+                renderPawns();
+                updateMovesListUI();
                 switchTurn();
                 focusedPawn = null;
                 if (pawn.isWhite()) {
@@ -320,7 +324,7 @@ public class MainBoard {
                     gameInfo.scorePlayerTwo.set(gameInfo.scorePlayerTwo.get() + maxCaptures);
                 }
             });
-        }; 
+        };
 
         maxCapturePaths.forEach(path -> {
             Vector2i landingPos = path.getLastPosition();
@@ -330,21 +334,16 @@ public class MainBoard {
 
     /**
      * Handles normal moves when no captures are available.
-     *
-     * @param board    GridPane representing the board.
-     * @param pawns    List of all pawns.
-     * @param pawn     The selected pawn.
-     * @param tileSize Size of each tile.
-     * @param inBounds Predicate to check if a position is within bounds.
-     * @param x        Current x-coordinate of the pawn.
-     * @param y        Current y-coordinate of the pawn.
+     * @param pawn Current Pawn
+     * @param inBounds Bounds of the board
+     * @param x Coordinate x
+     * @param y Coordinate y
      */
-    private void handleNormalMoves(List<Pawn> pawns, Pawn pawn, 
+    private void handleNormalMoves(Pawn pawn,
                                    BiPredicate<Integer, Integer> inBounds, int x, int y) {
         BiConsumer<Integer, Integer> highlightMove = (newX, newY) -> {
             Rectangle square = createHighlightSquare(Color.GREEN);
             board.add(square, newX, newY);
-            possibleMoves.add(new Vector2i(newX, newY));
 
             square.setOnMouseClicked(event -> {
                 if (isWhiteTurn != pawn.isWhite()) {
@@ -352,13 +351,17 @@ public class MainBoard {
                     return;
                 }
                 soundPlayer.playMoveSound();
-                pawn.setPosition(new Vector2i(newX, newY));
+                Vector2i landingPos = new Vector2i(newX,newY);
+                moves.add(new Move(pawn.getPosition(),landingPos));
+                pawn.setPosition(landingPos);
+
                 clearHighlights();
-                promotePawnIfNeeded(pawn, new Vector2i(newX, newY));
-                renderPawns(pawns);
+                promotePawnIfNeeded(pawn, landingPos);
+                renderPawns();
+                updateMovesListUI();
                 switchTurn();
                 focusedPawn = null;
-                
+
             });
         };
 
@@ -370,7 +373,7 @@ public class MainBoard {
                 int newX = x + dir[0];
                 int newY = y + dir[1];
 
-                if (inBounds.test(newX, newY) && getPawnAtPosition(pawns, new Vector2i(newX, newY)) == null) {
+                if (inBounds.test(newX, newY) && getPawnAtPosition(new Vector2i(newX, newY)) == null) {
                     highlightMove.accept(newX, newY);
                 }
             }
@@ -382,7 +385,7 @@ public class MainBoard {
                 int newX = x + dx;
                 int newY = y + dy;
 
-                while (inBounds.test(newX, newY) && getPawnAtPosition(pawns, new Vector2i(newX, newY)) == null) {
+                while (inBounds.test(newX, newY) && getPawnAtPosition(new Vector2i(newX, newY)) == null) {
                     highlightMove.accept(newX, newY);
                     newX += dx;
                     newY += dy;
@@ -394,7 +397,6 @@ public class MainBoard {
     /**
      * Recursively explores all possible capture paths from a position.
      *
-     * @param pawns            List of all pawns.
      * @param pawn             The pawn to move.
      * @param inBounds         Predicate to check if a position is within bounds.
      * @param x                Current x-coordinate.
@@ -402,7 +404,7 @@ public class MainBoard {
      * @param currentPath      The current capture path.
      * @param allPaths         List to collect all capture paths.
      */
-    private void captureCheck(List<Pawn> pawns, Pawn pawn,
+    private void captureCheck(Pawn pawn,
                           BiPredicate<Integer, Integer> inBounds, int x, int y,
                           CapturePath currentPath, List<CapturePath> allPaths) {
     boolean foundCapture = false;
@@ -416,7 +418,7 @@ public class MainBoard {
         int dx = dir[0];
         int dy = dir[1];
 
-        int maxSteps = pawn.isKing() ? boardSize.x : 1;
+        int maxSteps = pawn.isKing() ? tileamount.x : 1;
 
         for (int i = 1; i <= maxSteps; i++) {
             int captureX = x + dx * i;
@@ -428,7 +430,7 @@ public class MainBoard {
             }
 
             Vector2i capturePos = new Vector2i(captureX, captureY);
-            Pawn capturedPawn = getPawnAtPosition(pawns, capturePos);
+            Pawn capturedPawn = getPawnAtPosition(capturePos);
 
             // If we find a capturable opponent pawn
             if (capturedPawn != null && capturedPawn.isWhite() != pawn.isWhite() && !currentPath.capturedPawns.contains(capturedPawn)) {
@@ -445,13 +447,13 @@ public class MainBoard {
                     Vector2i landingPos = new Vector2i(landingX, landingY);
 
                     // If landing position is empty, it's a valid move
-                    if (getPawnAtPosition(pawns, landingPos) == null || landingPos.equals(pawn.getPosition())) {
+                    if (getPawnAtPosition(landingPos) == null || landingPos.equals(pawn.getPosition())) {
                         foundCapture = true;
                         CapturePath newPath = new CapturePath(currentPath);
                         newPath.addMove(landingPos, capturedPawn);
 
                         // Recursively check for further captures
-                        captureCheck(pawns, pawn, inBounds, landingX, landingY, newPath, allPaths);
+                        captureCheck(pawn, inBounds, landingX, landingY, newPath, allPaths);
                     } else {
                         break; // Stop if the landing position is blocked
                     }
@@ -460,7 +462,7 @@ public class MainBoard {
                 // **Stop if two pawns are adjacent**: Check for a pawn directly next to the first one
                 int nextX = captureX + dx;
                 int nextY = captureY + dy;
-                if (inBounds.test(nextX, nextY) && getPawnAtPosition(pawns, new Vector2i(nextX, nextY)) != null) {
+                if (inBounds.test(nextX, nextY) && getPawnAtPosition(new Vector2i(nextX, nextY)) != null) {
                     break; // Stop if there's no gap between pawns
                 }
             }
@@ -480,7 +482,6 @@ public class MainBoard {
     /**
      * Creates a highlight square for possible moves.
      *
-     * @param tileSize Size of each tile.
      * @param color    Color of the highlight.
      * @return Rectangle representing the highlight.
      */
@@ -497,34 +498,28 @@ public class MainBoard {
      * @param landingPos The landing position of the pawn.
      */
     private void promotePawnIfNeeded(Pawn pawn, Vector2i landingPos) {
-        if ((pawn.isWhite() && landingPos.y == 0) || (!pawn.isWhite() && landingPos.y == boardSize.y - 1)) {
+        if ((pawn.isWhite() && landingPos.y == 0) || (!pawn.isWhite() && landingPos.y == tileamount.y - 1)) {
             pawn.setKing(true);
         }
     }
 
     /**
      * Clears any highlights from the board.
-     *
-     * @param board    GridPane representing the board.
-     * @param tileSize Size of each tile.
      */
     private void clearHighlights() {
-        board.getChildren().removeIf(node -> node instanceof Rectangle && !(node instanceof ImageView));
+        board.getChildren().removeIf(node -> node instanceof Rectangle);
         renderBoard();
     }
 
     /**
      * Removes a captured pawn from the board and the list of pawns.
      *
-     * @param board        GridPane representing the board.
-     * @param pawns        List of all pawns.
      * @param capturedPawn The pawn to remove.
      */
-    private void removePawn(List<Pawn> pawns, Pawn capturedPawn) {
+    private void removePawn(Pawn capturedPawn) {
         pawns.remove(capturedPawn);
         board.getChildren().removeIf(node -> {
-            if (node instanceof ImageView) {
-                ImageView imageView = (ImageView) node;
+            if (node instanceof ImageView imageView) {
                 Integer colIndex = GridPane.getColumnIndex(imageView);
                 Integer rowIndex = GridPane.getRowIndex(imageView);
                 return colIndex != null && rowIndex != null &&
@@ -535,6 +530,9 @@ public class MainBoard {
         });
     }
 
+    /**
+     * Switches the current player
+     */
     public void switchTurn() {
         isWhiteTurn = !isWhiteTurn;
         gameInfo.playerTurn.set(isWhiteTurn ? 1 : 2);
@@ -559,43 +557,63 @@ public class MainBoard {
         setPlayerStyle.accept(playerTwoScore, false);
         setPlayerStyle.accept(playerOneTime, true);
         setPlayerStyle.accept(playerTwoTime, false);
-        
+
     }
 
+    /**
+     * Method to undo the last move
+     * @param move Move to be undone
+     */
+    public void undoMove(Move move) {
+        // Retrieve the pawn that was moved
+        Vector2i initialPos = move.getInitialPosition();
+        Vector2i finalPos = move.getFinalPosition();
+
+        // Find the pawn that needs to be moved back
+        Pawn movedPawn = getPawnAtPosition(finalPos);
+        if (movedPawn != null) {
+            // Move the pawn back to its original position
+            movedPawn.setPosition(initialPos);
+        }
+
+        List<Vector2i> capturedPostions = move.getCapturedPositions();
+        // If a capture occurred during the move, restore the captured pawn
+        if (capturedPostions != null) {
+            // Create a new captured pawn object
+            for (Vector2i capturedPostion : capturedPostions) {
+                Pawn capturedPawn = new Pawn(capturedPostion, !movedPawn.isWhite());
+
+                // Restore the captured pawn to its original position
+                pawns.add(capturedPawn);
+            }
+
+            // Update the visual board to include the restored pawns
+            renderPawns();
+        }
+
+        switchTurn();
+        // Clear any highlights and re-render the board
+        clearHighlights();
+        renderPawns();
+    }
+
+    /**
+     * @return Boolean indicating if white makes the next move
+     */
     public boolean isWhiteTurn() {
         return isWhiteTurn;
     }
-}
 
-/**
- * Represents a capture path in the game.
- */
-class CapturePath {
-    List<Vector2i> positions;       // Positions along the path
-    List<Pawn> capturedPawns;       // Pawns captured along the path
-
-    public CapturePath() {
-        positions = new ArrayList<>();
-        capturedPawns = new ArrayList<>();
-    }
-
-    public CapturePath(CapturePath other) {
-        positions = new ArrayList<>(other.positions);
-        capturedPawns = new ArrayList<>(other.capturedPawns);
-    }
-
-    public void addMove(Vector2i position, Pawn capturedPawn) {
-        positions.add(position);
-        if (capturedPawn != null) {
-            capturedPawns.add(capturedPawn);
+    public void undoLastMove() {
+        if (moves.size() > 0) {
+            undoMove(moves.getLast());
+            moves.removeLast();
+            updateMovesListUI();
         }
     }
 
-    public int getCaptureCount() {
-        return capturedPawns.size();
+    public List<Move> getMoves() {
+        return moves;
     }
 
-    public Vector2i getLastPosition() {
-        return positions.get(positions.size() - 1);
-    }
 }
